--- a/src/assets/styles/_globals.scss
+++ b/src/assets/styles/_globals.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@800&display=swap');
 * {
     box-sizing: border-box;
     padding: 0;
@@ -10,5 +11,5 @@ html{
 
 body {
     font-size: 1.3rem;
-    font-family: arial;
+    font-family: 'Poppins', sans-serif;
 }
